added kv storing functionality (pydantic model cant store dates yet)

--- a/pydantic_test.ipynb
+++ b/pydantic_test.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "from langchain.output_parsers import PydanticOutputParser\n",
     "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "from langchain_openai import ChatOpenAI\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "\n",
     "from typing import Optional\n",
     "\n",
@@ -30,7 +30,7 @@
     "\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "OPENAI_ASSISTANT_ID = os.getenv(\"OPENAI_ASSISTANT_ID\")\n",
-    "# model = ChatOpenAI(api_key=\"sk-proj-\")"
+    "model = ChatOpenAI(api_key=\"sk-proj-\")"
    ]
   },
   {
@@ -59,7 +59,6 @@
     "    partial_variables={\"format_instructions\": parser.get_format_instructions()},\n",
     ")\n",
     "\n",
-    "chain = prompt | model | parser\n",
     "\n",
     "obj = chain.invoke({\"query\": user_query})"
    ]
