improved storing organization in kv-store

--- a/vercel_kv.ipynb
+++ b/vercel_kv.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from app.utils.vercel_kv import KV\n",
+    "from datetime import date\n",
     "kv = KV()"
    ]
   },
@@ -33,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"[DailyProgress(date='2022-01-26', calories=2400, steps=3540, weight=99.45, protein=125.0)]\""
+       "'test'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +70,37 @@
     }
    ],
    "source": [
-    "et('+4917634309888', 'test')"
+    "kv.set('+4917634309888', 'test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2024-06-25'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#parse date\n",
+    "datetime.datetime.now().isoformat().split('T')[0]"
    ]
   },
   {
