Conversation flow and calculations based on data

--- a/vercel_kv.ipynb
+++ b/vercel_kv.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "from app.utils.vercel_kv import KV\n",
-    "from datetime import date\n",
+    "from datetime import datetime\n",
     "kv = KV()"
    ]
   },
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'test'"
+       "'{\"progress\": [{\"date\": \"\\'2022-10-10\\'\", \"calories\": 0, \"steps\": 10000, \"weight\": 0.0, \"protein\": 0.0}, {\"date\": \"\\'2022-10-20\\'\", \"calories\": null, \"steps\": 4000, \"weight\": 90.2, \"protein\": null}, {\"date\": \"\\'2022-10-25\\'\", \"calories\": null, \"steps\": 2004, \"weight\": 89.4, \"protein\": 55.0}, {\"date\": \"\\'2022-01-01\\'\", \"calories\": 2000, \"steps\": 1000, \"weight\": 70.5, \"protein\": 244.0}, {\"date\": \"\\'2022-01-01\\'\", \"calories\": 1755, \"steps\": 13455, \"weight\": 87.4, \"protein\": 100.0}, {\"date\": \"\\'2022-10-28\\'\", \"calories\": 2400, \"steps\": 15000, \"weight\": 89.4, \"protein\": 40.0}, {\"date\": \"\\'2022-03-28\\'\", \"calories\": 2900, \"steps\": 4000, \"weight\": 91.4, \"protein\": 34.0}, {\"date\": \"\\'2022-10-10\\'\", \"calories\": 2000, \"steps\": 14000, \"weight\": 99.4, \"protein\": 134.0}], \"current_day\": 9, \"height\": null, \"gender\": \"\\'male\\'\", \"age\": 19}'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,23 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'et' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43met\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m+4917634309888\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'et' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'OK'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "kv.set('+4917634309888', 'test')"
+    "kv.set('+4917634309888', None)"
    ]
   },
   {
@@ -101,6 +100,27 @@
    "source": [
     "#parse date\n",
     "datetime.datetime.now().isoformat().split('T')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'datetime' has no attribute 'now'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[39], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdatetime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnow\u001b[49m())\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'datetime' has no attribute 'now'"
+     ]
+    }
+   ],
+   "source": [
+    "print(datetime.now())"
    ]
   },
   {
