rename notebook for clarity

--- a/meta_message_test.ipynb
+++ b/meta_message_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "200\n",
-      "{'messaging_product': 'whatsapp', 'contacts': [{'input': '4917634309888', 'wa_id': '4917634309888'}], 'messages': [{'id': 'wamid.HBgNNDkxNzYzNDMwOTg4OBUCABEYEkUwQTNCQjVBQTg5NkExNUQ3RQA='}]}\n"
+      "{'messaging_product': 'whatsapp', 'contacts': [{'input': '41799506553', 'wa_id': '41799506553'}], 'messages': [{'id': 'wamid.HBgLNDE3OTk1MDY1NTMVAgARGBJGNTZENEZCQjlGNEIzQ0U4QzQA', 'message_status': 'accepted'}]}\n"
      ]
     }
    ],
@@ -23,19 +23,12 @@
     "\n",
     "# Headers for the request\n",
     "headers = {\n",
-    "    'Authorization': 'Bearer EAAGZAduAQLz0BOyWzXjah0Pz2MZBprvZBZBOkICcjZCqZCEuIKv1DtNiOwjVPomrpFxvD0hsIHPWp0MfvRwa2hBrLLLmcfZCD2AZBg6BNfpHhORjC1boSI6anVkOVx9GtVYmT9B8Luf13e6FxYc5CU71w0uiYGaZBSZCrbuZAMpHUQtIunyBlKQueNw9vPw26ZCTnoDvLS8EvzSa2Jb8Td2QkjoZD',\n",
+    "    'Authorization': 'Bearer EAAGZAduAQLz0BO37FI1pUgpvDq5UtuHZCmX3AG6sq6AlK1U0XUVG9XntZAtKIISPc3mZCEBtbkKHac8QlJHSEjd6Sq4SrVkpxjiCayZCA4mZCvZAMEZCZAC348FIT0bjPM9A9I9bRqg74zpkLzztD3sRVFVEzUoP3pxdwZB8D17L8rXbZBNZAosHUxrNG8MLdzaMeQdIM8TtUcMIZCG9qFWChFT9e',\n",
     "    'Content-Type': 'application/json'\n",
     "}\n",
     "\n",
     "# Data to send with the request\n",
-    "data = {\n",
-    "    \"messaging_product\": \"whatsapp\",\n",
-    "    \"to\": \"4917634309888\",\n",
-    "    \"type\": \"text\",\n",
-    "    \"text\": {\n",
-    "        \"body\": \"hello_world\",\n",
-    "    }\n",
-    "}\n",
+    "data = { \"messaging_product\": \"whatsapp\", \"to\": \"41799506553\", \"type\": \"template\", \"template\": { \"name\": \"hello_world\", \"language\": { \"code\": \"en_US\" } } }\n",
     "\n",
     "# Send the POST request\n",
     "response = requests.post(url, headers=headers, data=json.dumps(data))\n",
@@ -76,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
