--- a/openai_service_test.ipynb
+++ b/openai_service_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,50 +30,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'null'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kv.set(\"+41799506553\", None)\n",
+    "kv.get(\"+41799506553\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User is not None\n",
       "User:  Hiii\n",
-      "FitChat:  Hi there! Are you currently tracking your steps?\n"
+      "FitChat:  Hi there! Are you currently tracking your steps?\n",
+      "User:  Yes, im tracking my steps\n",
+      "FitChat:  That's awesome! What's your first name?\n",
+      "User:  Yves\n",
+      "FitChat:  Nice to meet you, Yves! You mentioned you're tracking your steps. How many steps are you aiming for each day?\n"
      ]
     }
    ],
    "source": [
+    "def _message_from_dict(message: dict) -> BaseMessage:\n",
+    "    _type = message[\"type\"]\n",
+    "    if _type == \"human\":\n",
+    "        return HumanMessage(**message)\n",
+    "    elif _type == \"ai\":\n",
+    "        return AIMessage(**message)\n",
+    "    elif _type == \"system\":\n",
+    "        return SystemMessage(**message)\n",
+    "    # Add other message types as needed\n",
+    "    else:\n",
+    "        raise ValueError(f\"Got unexpected message type: {_type}\")\n",
+    "\n",
     "def get_user(wa_id):\n",
     "    user_object = kv.get(wa_id)\n",
-    "    if user_object is None or user_object == \"\":\n",
-    "        print(\"User is None\")\n",
-    "        user = User(**user_object)\n",
-    "    else:\n",
-    "        print(\"User is not None\")\n",
+    "    \n",
+    "    if user_object is None or user_object == \"\" or user_object == \"null\":\n",
     "        user = User()\n",
-    "        user.messages = []\n",
+    "    else:\n",
+    "        user_dict = json.loads(user_object)\n",
+    "        if 'messages' in user_dict:\n",
+    "            user_dict['messages'] = [\n",
+    "                {\n",
+    "                    **message,\n",
+    "                    'base_message': _message_from_dict(message['base_message'])\n",
+    "                }\n",
+    "                for message in user_dict['messages']\n",
+    "            ]\n",
+    "        user = User(**user_dict)\n",
+    "\n",
     "    return user\n",
+    "\n",
+    "def update_user(wa_id, user, user_message, reply_message):\n",
+    "    user.messages.append(user_message)\n",
+    "    user.messages.append(reply_message)\n",
+    "    kv.set(wa_id, user.dict())\n",
+    "\n",
+    "def get_system_message(user):\n",
+    "    return SystemMessage(system_prompts[0])\n",
     "\n",
     "def process_message(message, wa_id):\n",
     "    user = get_user(wa_id)\n",
-    "        \n",
-    "    sys = Message(base_message=SystemMessage(system_prompts[0]))\n",
+    "    sys = Message(base_message=get_system_message(user))\n",
     "    hum = Message(time=datetime.now(), base_message=HumanMessage(message))\n",
     "    \n",
-    "    messages = [sys, hum]\n",
+    "    messages = user.messages[-5:] + [sys, hum]\n",
+    "    \n",
+    "    # for message in messages:\n",
+    "    #     print(message.base_message.type + \": \" + message.base_message.content)\n",
+    "    \n",
+    "    \n",
     "    base_messages = [message.base_message for message in messages]\n",
     "    reply = Message(time=datetime.now(), base_message=model.invoke(base_messages))\n",
     "    \n",
-    "    messages.append(reply)\n",
-    "    user.messages = messages\n",
+    "    update_user(wa_id, user, hum, reply)\n",
     "    \n",
-    "    kv.set(wa_id, user.dict())\n",
-    "    # print(kv.get(wa_id))\n",
     "    print(\"User: \", message)\n",
     "    print(\"FitChat: \", reply.base_message.content)\n",
     "    \n",
-    "process_message(\"Hiii\", \"+41799506553\")"
+    "process_message(\"Hiii\", \"+41799506553\")\n",
+    "process_message(\"Yes, im tracking my steps\", \"+41799506553\")\n",
+    "process_message(\"Yves\", \"+41799506553\")"
    ]
   },
   {
