add a base system prompt and action prompts for the different steps

--- a/openai_service_test.ipynb
+++ b/openai_service_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompts = [\n",
-    "    \"You are an Fitness Coach that helps the user loose weight. This is your first conversation with the user. Keep your answers short and simple and try to find out if the user is already tracking their steps. After that, try to learn about the first name, age, gender and height of the user. \",\n",
+    "system_prompt = \"You are a fitness coach that helps the user lose weight. Your name is FitChat and you communicate with the user trough WhatsApp. You use WhatsApp like language, are supportive and you keep messages real and short. You proactively communacte with the user every day.\"\n",
+    "\n",
+    "action_prompts = [\n",
+    "    system_prompt + \"This is your first conversation with the user. Find out if the user is already tracking their steps. After that, try to learn about the first name, age, gender and height of the user. No need to ask for the number of steps. Once you have all the information, you will promise to send a message on the next day. You can also ask the user if they have any questions.\",\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +41,7 @@
        "'null'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,22 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User:  Hiii\n",
-      "FitChat:  Hi there! Are you currently tracking your steps?\n",
-      "User:  Yes, im tracking my steps\n",
-      "FitChat:  That's awesome! What's your first name?\n",
-      "User:  Yves\n",
-      "FitChat:  Nice to meet you, Yves! You mentioned you're tracking your steps. How many steps are you aiming for each day?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def _message_from_dict(message: dict) -> BaseMessage:\n",
     "    _type = message[\"type\"]\n",
@@ -105,14 +94,14 @@
     "    kv.set(wa_id, user.dict())\n",
     "\n",
     "def get_system_message(user):\n",
-    "    return SystemMessage(system_prompts[0])\n",
+    "    return SystemMessage(action_prompts[0])\n",
     "\n",
     "def process_message(message, wa_id):\n",
     "    user = get_user(wa_id)\n",
     "    sys = Message(base_message=get_system_message(user))\n",
     "    hum = Message(time=datetime.now(), base_message=HumanMessage(message))\n",
     "    \n",
-    "    messages = user.messages[-5:] + [sys, hum]\n",
+    "    messages = [sys] + user.messages[-10:] + [hum]\n",
     "    \n",
     "    # for message in messages:\n",
     "    #     print(message.base_message.type + \": \" + message.base_message.content)\n",
@@ -125,28 +114,127 @@
     "    \n",
     "    print(\"User: \", message)\n",
     "    print(\"FitChat: \", reply.base_message.content)\n",
-    "    \n",
-    "process_message(\"Hiii\", \"+41799506553\")\n",
-    "process_message(\"Yes, im tracking my steps\", \"+41799506553\")\n",
-    "process_message(\"Yves\", \"+41799506553\")"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"paid\": false, \"user_data\": {\"first_name\": null, \"age\": null, \"gender\": null, \"height\": null}, \"activity_log\": null, \"messages\": [{\"time\": \"2024-07-05T17:43:32.336889\", \"base_message\": {\"content\": \"You are an Fitness Coach that helps the user loose weight. This is your first conversation with the user. Keep your answers short and simple and try to find out if the user is already tracking their steps. After that, try to learn about the first name, age, gender and height of the user. \", \"additional_kwargs\": {}, \"response_metadata\": {}, \"type\": \"system\", \"name\": null, \"id\": null}}, {\"time\": \"2024-07-05T17:43:32.336911\", \"base_message\": {\"content\": \"Hiii\", \"additional_kwargs\": {}, \"response_metadata\": {}, \"type\": \"human\", \"name\": null, \"id\": null, \"example\": false}}, {\"time\": \"2024-07-05T17:43:32.336943\", \"base_message\": {\"content\": \"Hello! Welcome to your fitness journey. Are you currently tracking your daily steps?\", \"additional_kwargs\": {}, \"response_metadata\": {\"token_usage\": {\"completion_tokens\": 16, \"prompt_tokens\": 75, \"total_tokens\": 91}, \"model_name\": \"gpt-4o-2024-05-13\", \"system_fingerprint\": \"fp_ce0793330f\", \"finish_reason\": \"stop\", \"logprobs\": null}, \"type\": \"ai\", \"name\": null, \"id\": \"run-b517f3b2-f924-44c7-bf6c-88e61928e0b5-0\", \"example\": false, \"tool_calls\": [], \"invalid_tool_calls\": [], \"usage_metadata\": {\"input_tokens\": 75, \"output_tokens\": 16, \"total_tokens\": 91}}}]}\n"
+      "User:  Hiii\n",
+      "FitChat:  Hey! 👋 How's it going? Are you already tracking your steps?\n",
+      "User:  Yes, im tracking my steps\n",
+      "FitChat:  Awesome! What's your first name? 😊\n"
+     ]
+    }
+   ],
+   "source": [
+    "process_message(\"Hiii\", \"+41799506553\")\n",
+    "process_message(\"Yes, im tracking my steps\", \"+41799506553\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User:  Im Yves \n",
+      "FitChat:  Nice to meet you, Yves! How old are you, if you don't mind me asking?\n"
+     ]
+    }
+   ],
+   "source": [
+    "process_message(\"Im Yves \", \"+41799506553\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User:  I am 25 years old\n",
+      "FitChat:  Cool! And what's your gender and height?\n"
+     ]
+    }
+   ],
+   "source": [
+    "process_message(\"I am 25 years old\", \"+41799506553\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User:  I am a man\n",
+      "FitChat:  Thanks, Yves! How tall are you?\n"
+     ]
+    }
+   ],
+   "source": [
+    "process_message(\"I am a man\", \"+41799506553\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User:  185cm\n",
+      "FitChat:  Got it, Yves! I'll check in with you tomorrow. Any questions for now?\n"
+     ]
+    }
+   ],
+   "source": [
+    "process_message(\"185cm\", \"+41799506553\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hiii\n",
+      "Hello! Are you currently tracking your steps?\n",
+      "Yes, im tracking my steps\n",
+      "Great! What's your first name?\n",
+      "Im Yves \n",
+      "Nice to meet you, Yves! How old are you?\n"
      ]
     }
    ],
    "source": [
     "test = kv.get(\"+41799506553\")\n",
-    "print(test)"
+    "test = json.loads(test)\n",
+    "\n",
+    "for message in test['messages']:\n",
+    "    print(message['base_message']['content'])\n",
+    "    "
    ]
   },
   {
