add user data extraction

--- a/openai_service_test.ipynb
+++ b/openai_service_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "from app.utils.vercel_kv import KV\n",
     "from langchain_core.messages import AIMessage, HumanMessage, SystemMessage, BaseMessage\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from app.models import User, Message\n",
+    "from app.models import User, Message, UserData, ActivityLog\n",
+    "from langchain.output_parsers import PydanticOutputParser\n",
+    "from langchain_core.prompts import PromptTemplate\n",
     "\n",
     "kv = KV()\n",
     "model = ChatOpenAI(model_name=\"gpt-4o\")"
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +43,7 @@
        "'null'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,38 +90,51 @@
     "\n",
     "    return user\n",
     "\n",
-    "def update_user(wa_id, user, user_message, reply_message):\n",
-    "    user.messages.append(user_message)\n",
-    "    user.messages.append(reply_message)\n",
+    "def update_user(wa_id, user):\n",
     "    kv.set(wa_id, user.dict())\n",
     "\n",
     "def get_system_message(user):\n",
     "    return SystemMessage(action_prompts[0])\n",
     "\n",
+    "def update_user_data(user_data: UserData, user_query: str):\n",
+    "    user_data_parser = PydanticOutputParser(pydantic_object=UserData)\n",
+    "    user_data_prompt = PromptTemplate(\n",
+    "        template=\"Extract the user data based on these instructions: \\n{format_instructions}\\n Those are the given information: {query}\\n Those are the existing data: {existing_data}\",\n",
+    "        input_variables=[\"query\", \"existing_data\"],\n",
+    "        partial_variables={\"format_instructions\": user_data_parser.get_format_instructions()},\n",
+    "    )\n",
+    "    user_data_chain = user_data_prompt | model | user_data_parser\n",
+    "    updated_user_data = user_data_chain.invoke({\"query\": user_query, \"existing_data\": user_data.dict()})\n",
+    "    return updated_user_data\n",
+    "\n",
     "def process_message(message, wa_id):\n",
     "    user = get_user(wa_id)\n",
     "    sys = Message(base_message=get_system_message(user))\n",
-    "    hum = Message(time=datetime.now(), base_message=HumanMessage(message))\n",
+    "    user_message = Message(time=datetime.now(), base_message=HumanMessage(message))\n",
     "    \n",
-    "    messages = [sys] + user.messages[-10:] + [hum]\n",
+    "    messages = [sys] + user.messages[-10:] + [user_message]\n",
     "    \n",
     "    # for message in messages:\n",
     "    #     print(message.base_message.type + \": \" + message.base_message.content)\n",
     "    \n",
     "    \n",
     "    base_messages = [message.base_message for message in messages]\n",
-    "    reply = Message(time=datetime.now(), base_message=model.invoke(base_messages))\n",
+    "    reply_message = Message(time=datetime.now(), base_message=model.invoke(base_messages))\n",
     "    \n",
-    "    update_user(wa_id, user, hum, reply)\n",
+    "    user.messages.append(user_message)\n",
+    "    user.messages.append(reply_message)\n",
+    "    user.user_data = update_user_data(user.user_data, user_message.base_message.content)\n",
     "    \n",
-    "    print(\"User: \", message)\n",
-    "    print(\"FitChat: \", reply.base_message.content)\n",
-    "    "
+    "    update_user(wa_id, user)\n",
+    "    \n",
+    "    print(\"User: \", user_message.base_message.content)\n",
+    "    print(\"FitChat: \", reply_message.base_message.content)\n",
+    "    print(\"User data: \", user.user_data.dict())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,9 +142,11 @@
      "output_type": "stream",
      "text": [
       "User:  Hiii\n",
-      "FitChat:  Hey! 👋 How's it going? Are you already tracking your steps?\n",
+      "FitChat:  Hey! How's it going? 😊 Quick question, are you already tracking your steps?\n",
+      "User data:  {'first_name': None, 'age': None, 'gender': None, 'height': None}\n",
       "User:  Yes, im tracking my steps\n",
-      "FitChat:  Awesome! What's your first name? 😊\n"
+      "FitChat:  Awesome! What's your name? I'm FitChat, here to help you crush your goals! 💪\n",
+      "User data:  {'first_name': None, 'age': None, 'gender': None, 'height': None}\n"
      ]
     }
    ],
@@ -140,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +165,8 @@
      "output_type": "stream",
      "text": [
       "User:  Im Yves \n",
-      "FitChat:  Nice to meet you, Yves! How old are you, if you don't mind me asking?\n"
+      "FitChat:  Nice to meet you, Yves! How old are you, if you don't mind me asking?\n",
+      "User data:  {'first_name': 'Yves', 'age': None, 'gender': None, 'height': None}\n"
      ]
     }
    ],
@@ -158,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +184,8 @@
      "output_type": "stream",
      "text": [
       "User:  I am 25 years old\n",
-      "FitChat:  Cool! And what's your gender and height?\n"
+      "FitChat:  Cool! And what's your gender and height, Yves?\n",
+      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': None, 'height': None}\n"
      ]
     }
    ],
@@ -176,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +203,8 @@
      "output_type": "stream",
      "text": [
       "User:  I am a man\n",
-      "FitChat:  Thanks, Yves! How tall are you?\n"
+      "FitChat:  Got it, Yves. And how tall are you?\n",
+      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'male', 'height': None}\n"
      ]
     }
    ],
@@ -194,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +222,8 @@
      "output_type": "stream",
      "text": [
       "User:  185cm\n",
-      "FitChat:  Got it, Yves! I'll check in with you tomorrow. Any questions for now?\n"
+      "FitChat:  Perfect! Thanks for sharing, Yves. I'll check in with you tomorrow. Got any questions for me right now? 😊\n",
+      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'male', 'height': 185}\n"
      ]
     }
    ],
