add feature for automatic message sending

--- a/openai_service_test.ipynb
+++ b/openai_service_test.ipynb
@@ -29,7 +29,12 @@
     "\n",
     "action_prompts = [\n",
     "    system_prompt + \"This is your first conversation with the user. Find out if the user is already tracking their steps. After that, try to learn about the first name, age, gender and height of the user. No need to ask for the number of steps. Once you have all the information, you will promise to send a message on the next day. You can also ask the user if they have any questions.\",\n",
-    "]"
+    "    system_prompt + \"This is your second conversation with the user. Today, you are proactively sending a message to the user. You will ask, how many steps the user has taken yesterday. Everything else will follow later. \",\n",
+    "]\n",
+    "\n",
+    "# thought in regards to scheduled messages, that are pre-written and sent at a specific time\n",
+    "# less ideal, since it is not personalized\n",
+    "    "
    ]
   },
   {
@@ -55,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,13 +93,20 @@
     "            ]\n",
     "        user = User(**user_dict)\n",
     "\n",
-    "    return user\n",
-    "\n",
+    "    return user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def update_user(wa_id, user):\n",
     "    kv.set(wa_id, user.dict())\n",
     "\n",
     "def get_system_message(user):\n",
-    "    return SystemMessage(action_prompts[0])\n",
+    "    return SystemMessage(action_prompts[user.day])\n",
     "\n",
     "def update_user_data(user_data: UserData, user_query: str):\n",
     "    user_data_parser = PydanticOutputParser(pydantic_object=UserData)\n",
@@ -107,17 +119,34 @@
     "    updated_user_data = user_data_chain.invoke({\"query\": user_query, \"existing_data\": user_data.dict()})\n",
     "    return updated_user_data\n",
     "\n",
+    "def send_daily_message(wa_id):\n",
+    "    user = get_user(wa_id)\n",
+    "    user.day += 1\n",
+    "    \n",
+    "    sys = Message(base_message=get_system_message(user))\n",
+    "    messages = [sys] + user.messages[-10:]\n",
+    "    base_messages = [message.base_message for message in messages]\n",
+    "    reply_message = Message(time=datetime.now(), base_message=model.invoke(base_messages))    \n",
+    "    user.messages.append(reply_message)\n",
+    "    \n",
+    "    update_user(wa_id, user)\n",
+    "    print(\"FitChat: \", reply_message.base_message.content)\n",
+    "    \n",
+    "    \n",
     "def process_message(message, wa_id):\n",
+    "    if message == \"reset\":\n",
+    "        kv.set(wa_id, None)\n",
+    "        return \"Reset successful!\"\n",
+    "    \n",
+    "    if message == \"get\":\n",
+    "        user = get_user(wa_id)\n",
+    "        return user.dict()\n",
+    "    \n",
     "    user = get_user(wa_id)\n",
     "    sys = Message(base_message=get_system_message(user))\n",
     "    user_message = Message(time=datetime.now(), base_message=HumanMessage(message))\n",
     "    \n",
-    "    messages = [sys] + user.messages[-10:] + [user_message]\n",
-    "    \n",
-    "    # for message in messages:\n",
-    "    #     print(message.base_message.type + \": \" + message.base_message.content)\n",
-    "    \n",
-    "    \n",
+    "    messages = [sys] + user.messages[-10:] + [user_message]    \n",
     "    base_messages = [message.base_message for message in messages]\n",
     "    reply_message = Message(time=datetime.now(), base_message=model.invoke(base_messages))\n",
     "    \n",
@@ -134,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,10 +171,7 @@
      "output_type": "stream",
      "text": [
       "User:  Hiii\n",
-      "FitChat:  Hey! How's it going? 😊 Quick question, are you already tracking your steps?\n",
-      "User data:  {'first_name': None, 'age': None, 'gender': None, 'height': None}\n",
-      "User:  Yes, im tracking my steps\n",
-      "FitChat:  Awesome! What's your name? I'm FitChat, here to help you crush your goals! 💪\n",
+      "FitChat:  Hey! 😊 How's it going? Are you already tracking your steps?\n",
       "User data:  {'first_name': None, 'age': None, 'gender': None, 'height': None}\n"
      ]
     }
@@ -157,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +191,7 @@
      "output_type": "stream",
      "text": [
       "User:  Im Yves \n",
-      "FitChat:  Nice to meet you, Yves! How old are you, if you don't mind me asking?\n",
+      "FitChat:  Nice to meet you, Yves! How old are you?\n",
       "User data:  {'first_name': 'Yves', 'age': None, 'gender': None, 'height': None}\n"
      ]
     }
@@ -176,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +210,7 @@
      "output_type": "stream",
      "text": [
       "User:  I am 25 years old\n",
-      "FitChat:  Cool! And what's your gender and height, Yves?\n",
+      "FitChat:  Cool! What's your height, Yves? And are you male or female?\n",
       "User data:  {'first_name': 'Yves', 'age': '25', 'gender': None, 'height': None}\n"
      ]
     }
@@ -195,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -203,8 +229,8 @@
      "output_type": "stream",
      "text": [
       "User:  I am a man\n",
-      "FitChat:  Got it, Yves. And how tall are you?\n",
-      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'male', 'height': None}\n"
+      "FitChat:  Got it, thanks! And your height?\n",
+      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'man', 'height': None}\n"
      ]
     }
    ],
@@ -214,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,8 +248,8 @@
      "output_type": "stream",
      "text": [
       "User:  185cm\n",
-      "FitChat:  Perfect! Thanks for sharing, Yves. I'll check in with you tomorrow. Got any questions for me right now? 😊\n",
-      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'male', 'height': 185}\n"
+      "FitChat:  Perfect, Yves! I'll check in with you tomorrow. Any questions for now? 💬\n",
+      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'man', 'height': 185}\n"
      ]
     }
    ],
@@ -233,7 +259,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FitChat:  Perfect, Yves! So, how many steps did you take yesterday? 🚶‍♂️\n"
+     ]
+    }
+   ],
+   "source": [
+    "send_daily_message(\"+41799506553\")\n",
+    "process_message(\"I did 10k steps\", \"+41799506553\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
